# yyt1771_starter

./: .gitignore  README.md  pyproject.toml
configs/: dev_lab.local.example.yaml  dev_lab.yaml  dev_mock.yaml  prod_win.yaml  recipe_example.yaml
docs/: adjustment_contract_v1.md  adjustment_mvp_breakdown_v1.md  architecture_lock.md  codex_response_contract.md  codex_task_000_scaffold_freeze.md  codex_task_001_contract_freeze.md  codex_task_002_vision_minimum.md  codex_task_003_curve_af95.md  codex_task_004_session_storage.md  codex_task_005_camera_rtsp.md  codex_task_005a_rtsp_url_fix.md  codex_task_006_temp_modbus.md  codex_task_006a_temp_modbus_api_fix.md  codex_task_007_plc_modbus_tcp.md  codex_task_008_web_architecture_freeze.md  codex_task_009_web_profile_runtime.md  codex_task_010_session_api.md  codex_task_011_web_ui_shell.md  codex_task_012_session_history.md  codex_task_013_replay_session.md  codex_task_014_replay_detail_visualization.md  codex_task_015_system_precheck.md  codex_task_016_workspace_shell.md  codex_task_017_workspace_replay_detail.md  codex_task_018_workspace_stage_states.md  codex_task_019_workspace_computation_view.md  codex_task_020_workspace_adjustment_preview.md  codex_task_021_adjustment_contract.md  codex_wp_a_adjustment_mvp.md  master_control_plan.md  module_map.md  requirements_overview.md  ui_information_architecture_v1.md  workspace_adjustment_preview_v1.md  workspace_computation_view_v1.md  workspace_page_breakdown_v1.md  workspace_stage_mapping_v1.md
examples/: __init__.py  offline_demo.py
src/: __init__.py
tests/: conftest.py
(+97 files in other folders)
